<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildrenProfile" >

    <ScrollView
        android:id="@+id/activity_schildren_profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_bar" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/textFieldsStyle"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLines="1" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine" >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_posttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TimePicker
                    android:id="@+id/timePicker_posttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_postdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <DatePicker
                    android:id="@+id/datePicker_postdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_bar"
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:measureWithLargestChild="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/leftSpacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:filterTouchesWhenObscured="true"
            android:maxLines="1"
            android:text="@string/Ok"
            android:textSize="8pt" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:maxLines="1"
            android:text="@string/return_back"
            android:textSize="8pt" />

        <LinearLayout
            android:id="@+id/rightSpacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>