<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ViewChildrenProfile" >

    <ScrollView
        android:id="@+id/activity_schildren_profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_bar"
        android:layout_alignParentTop="true" >

        <LinearLayout
            style="@style/textFieldsStyle"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_Awatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/baby_default" />

            <LinearLayout
                style="@style/textFieldsStyle"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_nameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/textFieldsStyle"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_surname"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_surnameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/textFieldsStyle"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_middlename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_middlename"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_middlenameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/textFieldsStyle"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_weightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/textFieldsStyle"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_growth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_growth"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_growthValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/textFieldsStyle"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_birthdate"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_birthdateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_bar"
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:measureWithLargestChild="true"
        android:orientation="horizontal" >

        <!-- style="?android:attr/buttonBarStyle" -->

        <LinearLayout
            android:id="@+id/leftSpacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
          
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="gone" />
<!--   android:layout_marginTop="5dp" -->

        <Button
            android:id="@+id/button_edit"
            style="@style/ButtonBarButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:maxLines="1"
            android:text="@string/edit" 
            android:textSize="8pt"/>

<!--          style="?android:attr/buttonBarButtonStyle" -->
        
        <Button
            android:id="@+id/button_back"
            style="@style/ButtonBarButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default_small"
            android:maxLines="1"
            android:text="@string/return_back"
            android:textSize="8pt" />

        <LinearLayout
            android:id="@+id/rightSpacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>